# Morpheus

./: ARCHITECTURE.md  Cargo.toml  HitGovernanceObject.kt  README.md  bio.corridor.nanoswarm.microspace.v1.aln  evolution_audit_record.v1.json  hit_governance_object.v1.json  neurocyber.safety.cybervision-nanoswarm.aln  neurorights-policy-schema.json
.github/workflows/: ci.yml
aln/particles/: no-remote-biocontrol.aln.json
app/src/main/java/com/example/snc/: Models.kt
crates/ceim-kernel/: Cargo.toml
crates/ceim-kernel/src/: ceim.rs  mass_load.rs
crates/core-contracts/src/: hero_audit.rs
crates/cpvm-kernel/src/: lyapunov.rs  viability.rs
crates/cybo-intake-scheduler/: Cargo.toml
crates/cybo-intake-scheduler/src/: main.rs  optimizer.rs
crates/econet-dashboard/src/: main.rs  storage.rs
crates/governance-healthcare/src/: lib.rs
crates/implant-interface-guardsrc/: guard.rs
crates/morpheus-cli/: Cargo.toml
crates/morpheus-cli/src/: main.rs
crates/morpheus-client/: Aspect-Determination.csv  README.md
crates/morpheus-client/src/: main.rs
crates/morpheus-client/src/core/: reconciliation.rs
crates/morpheus-client/src/nanoswarm/: microspace_guard.rs
crates/morpheus-client/src/types/: evidence.rs  policy.rs
crates/morpheus-compliance/: Cargo.toml
crates/morpheus-config/: Cargo.toml
crates/morpheus-core/src/evolution/: audit.rs
crates/morpheus-googolswarm/morpheus-core/: Cargo.toml
crates/morpheus-googolswarm/morpheus-core/src/: governance.rs  species.rs
crates/morpheus-googolswarm/morpheus-examples/src/: sample_human_role.aln
crates/morpheus-googolswarm/morpheus-orchestrator/src/: cli.rs  config.rs  events.rs  github.rs
crates/morpheus-googolswarm/morpheus-spec-aln/src/: aln.rs  parser.rs
crates/morpheus-neuromorph-core/src/: lib.rs
crates/morpheus-registry/: Cargo.toml
crates/morpheus-registry/src/: lib.rs
crates/morpheus-security/: Cargo.toml
crates/nitrate-mar-planner/src/: scheduler.rs
crates/orchestration/: Cargo.toml
crates/pfas-selector/src/: design.rs
crates/phoenix-bridge/src/: feeds.rs  main.rs  shards.rs
docs/: snc-android-ffi-spec.md
manifests/: neuro-eco-identity.bostrom18.local.json
neurorights-shell/src/: lib.rs
qpudatashards/corridors/: city.phx-smartinfra-2024.aln
qpudatashards/juris/: state.co-neuraldata-2024.aln
quantum-neuromorph-hub/: Cargo.toml
schemas/: biomech-integration-policy.schema.json  evolution-audit-record.schema.json  neurorights-policy.schema.json
src/main/java/org/neuromorph/bootstrap/: Main.java  SystemBootstrapper.java
src/main/java/org/neuromorph/sovereignty/: DefaultSovereignNeuromorphContract.java
web/econet-dashboard-ui/: package.json  tsconfig.json
web/econet-dashboard-ui/src/: api.ts  main.ts
web/econet-dashboard-ui/src/components/: App.ts  NodeCard.ts
