[workspace]
members = [
    "crates/morpheus-config",
    "crates/morpheus-compliance",
    "crates/morpheus-security",
    "crates/morpheus-registry",
    "crates/morpheus-neuromorph-core",
    "crates/morpheus-cli",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Morpheus Neuromorph Collective"]
rust-version = "1.74"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
parking_lot = "0.12"
