[workspace]
members = [
  "crates/governance-core",
  "crates/neuromorph-sim",
  "crates/ceim-kernel",
  "crates/cpvm-kernel",
  "crates/phoenix-bridge",
  "crates/nitrate-mar-planner",
  "crates/pfas-selector",
  "crates/cybo-intake-scheduler",
  "crates/econet-dashboard",
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Bostrom <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
license = "MIT"
description = "Quantum-learning neuromorph + CEIM/CPVM eco-governance hub for AI chat and GitHub workflows."

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["macros", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
