[package]
name = "morpheus-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
morpheus-neuromorph-core = { path = "../morpheus-neuromorph-core" }
